--- a/Umbrella/build.gradle
+++ b/Umbrella/build.gradle
@@ -43,7 +43,7 @@ android {
 
   defaultConfig {
     applicationId "com.foo.umbrella"
-    minSdkVersion 19
+    minSdkVersion 21
     targetSdkVersion 26
     versionCode 1
     versionName '1.0'
@@ -52,6 +52,8 @@ android {
     buildConfigField "String", "API_URL", "\"http://api.wunderground.com\""
 
     signingConfig signingConfigs.umbrella
+
+    vectorDrawables.useSupportLibrary = true
   }
 
   buildTypes {
@@ -101,6 +103,10 @@ dependencies {
   //Dagger 2
   compile 'com.google.dagger:dagger:2.9'
   annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+
+  // ConstraintLayout
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 
   debugCompile 'com.facebook.stetho:stetho:1.4.2'
   debugCompile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
