--- a/Umbrella/build.gradle
+++ b/Umbrella/build.gradle
@@ -3,13 +3,17 @@ buildscript {
     jcenter()
     mavenCentral()
   }
+
+  ext.android_plugin_version="3.0.0-beta4"
+
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0-beta4'
+    classpath "com.android.tools.build:gradle:$android_plugin_version"
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
   }
 }
 
-repositories{
+repositories {
   jcenter()
   mavenCentral()
   maven {
@@ -20,9 +24,9 @@ repositories{
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.ben-manes.versions'
 
-ext.weatherUndergroundApiKey = project.hasProperty('com.foo.umbrella.weatherundergroundapikey')?
-    project.getProperty('com.foo.umbrella.weatherundergroundapikey'):
-    System.getenv('WEATHER_UNDERGROUND_API_KEY')?:''
+ext.weatherUndergroundApiKey = project.hasProperty('com.foo.umbrella.weatherundergroundapikey') ?
+    project.getProperty('com.foo.umbrella.weatherundergroundapikey') :
+    System.getenv('WEATHER_UNDERGROUND_API_KEY') ?: ''
 
 android {
   compileSdkVersion 26
@@ -57,8 +61,8 @@ android {
   }
 
   buildTypes {
-    debug{
-      applicationIdSuffix'.debug'
+    debug {
+      applicationIdSuffix '.debug'
     }
   }
 
@@ -69,6 +73,10 @@ android {
 }
 
 ext.androidSupportVersion = '26.0.2'
+
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 dependencies {
   compile "com.android.support:support-v4:${androidSupportVersion}"
@@ -107,8 +115,14 @@ dependencies {
   // ConstraintLayout
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
+  kapt "com.android.databinding:compiler:$android_plugin_version"
 
   debugCompile 'com.facebook.stetho:stetho:1.4.2'
   debugCompile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
   debugCompile 'com.facebook.stetho:stetho-timber:1.4.2@aar'
 }
+
+kapt {
+  generateStubs = true
+}
+
