--- a/Umbrella/src/main/AndroidManifest.xml
+++ b/Umbrella/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Umbrella">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.WeatherActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.WeatherActivity"></activity>
     </application>
 
 </manifest>
