--- a/Umbrella/build.gradle
+++ b/Umbrella/build.gradle
@@ -107,6 +107,7 @@ dependencies {
   //Dagger 2
   compile 'com.google.dagger:dagger:2.9'
   annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+  provided 'javax.annotation:jsr250-api:1.0'
 
   // ConstraintLayout
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
