--- a/Umbrella/src/main/AndroidManifest.xml
+++ b/Umbrella/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".settings.SettingsActivity"></activity>
+        <activity android:name=".settings.SettingActivity"></activity>
     </application>
 
 </manifest>
